--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 html {
-  /*background: url('./assets/background.png') no-repeat center center fixed;*/
-  background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed;
+  background: url('../assets/Background_Kled.webp') no-repeat center center fixed;
+  /* background: url('https://static.wikia.nocookie.net/leagueoflegends/images/6/69/Where_the_Drakalops_Roam.png/revision/latest?cb=20180629205253') no-repeat center center fixed; */
   box-sizing: border-box;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -10,19 +10,31 @@ html {
   overflow: hidden;
 }
 
+@font-face {
+  font-family: "Beaufort for lol";
+  src: url("../assets/BeaufortForLoL-TTF/BeaufortforLOL-Bold.ttf");
+}
+
+@font-face {
+  font-family: "Spiegel";
+  src: url("../assets/Spiegel-TTF/Spiegel_TT_Regular.ttf");
+}
+
 h1 {
   text-align: center;
   font-size: 90px;
-  font-family: "Comic Sans MS", "Comic Sans", cursive;
-  color: white;
-  -webkit-text-stroke: 2px black;
+  /* font-family: "Comic Sans MS", "Comic Sans", cursive; */
+  font-family: "Beaufort for lol";
+  color: black;
 }
 
 h2 {
+  font-family: "Spiegel";
   text-align: center;
   font-size: 40px;
-  color: white;
-  -webkit-text-stroke: 1px black;
+  color: black;
+  /* -webkit-text-stroke: 1px black; */
+
 }
 
 #start {
@@ -31,7 +43,8 @@ h2 {
 }
 
 #timer{
-    color: white;
+  font-family: "Spiegel";
+  color: black;
 }
 
 .grid {
@@ -51,8 +64,8 @@ h2 {
 
 .hole:after {
   display: block;
-  /*background: url("./assets/hole.png") bottom center no-repeat;*/
-  background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat;
+  background: url("../assets/Mushroom.png") bottom center no-repeat;
+  /* background: url("https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/hole.png?raw=true") bottom center no-repeat; */
   background-size:contain;
   content:'';
   width: 100%;
@@ -64,8 +77,8 @@ h2 {
 }
 
 .mole {
-  /*background:url('./assets/mole.png') bottom center no-repeat;*/
-  background:url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/mole.png?raw=true') bottom center no-repeat;
+  background:url('../assets/Teemo.png') top center no-repeat;
+  /* background:url('https://banner2.cleanpng.com/20180705/og/kisspng-fan-art-nickname-clip-art-teemo-5b3ee29e4c7863.1219035515308479023132.jpg') bottom center no-repeat; */
   background-size: 40%;
   position: absolute;
   top: 100%;
